Fixed wraping issues with two divs. Added animation to the elements on the page by including JS code to apply css style to the elements in the viewport. Reformated previous code so the new transitions wouldn't interfere with theme switching. Included a storage in browser for saving the current theme user selected.

--- a/public/styles.css
+++ b/public/styles.css
@@ -65,6 +65,21 @@
     overflow-wrap: break-word;
 }
 
+.hidden {   
+    opacity: 0;
+    filter: blur(.2rem);
+    transition: opacity .5s ease-out,   
+                filter .5s ease-out,  
+                transform .4s ease-out;
+    transform: translateX(-100%);
+}
+
+.show { 
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
 body {
     margin: 0;
     padding: 1.25rem;
@@ -83,10 +98,25 @@ body {
 .header {
     display: grid;
     padding: 1.25rem;
-    width: 100%;
-    max-width: 40.625rem;
+    width: clamp (100%, 40.625rem);
     text-align: left;
     justify-self: center;
+}
+
+.contact-info p:nth-child(2) {    
+    transition-delay: 0ms;
+}
+
+.contact-info p:nth-child(3) {    
+    transition-delay: 50ms;
+}
+
+.contact-info p:nth-child(4) {    
+    transition-delay: 100ms;
+}
+
+.contact-info p:nth-child(5) {    
+    transition-delay: 150ms;
 }
 
 .skills {
@@ -207,5 +237,14 @@ footer {
 
     .theme-button {
         font-size: .875rem;
+    }
+
+    .skills {
+        display: block;
+    }
+
+    .hard-skills,
+    .soft-skills {
+        margin-bottom: .625rem;
     }
 }
